Customer List display on smaller screen

--- a/src/app/features/customer/customer.component.css
+++ b/src/app/features/customer/customer.component.css
@@ -1,41 +1,37 @@
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Poppins" , sans-serif;
+  font-family: "Poppins", sans-serif;
 }
-img{
+img {
   max-width: fit-content;
 }
-.body{
+.body {
   min-height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
   background: #4c3bec;
   padding: 130px;
-
-  }
-.container{
-z-index: 0;
+}
+.container {
+  z-index: 0;
   border-radius: 10px;
   position: relative;
-  max-width: 850px;
+  max-width: 1050px;
   width: 100%;
   background: #fff;
   padding: 20px 50px;
-  box-shadow: 0 5px 10px rgba(0,0,0,0.2);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
   perspective: 2700px;
   opacity: 100%;
-padding: 65px;
-
-
+  padding: 65px;
 }
-input{
+input {
   margin-top: 5px;
 }
-.container .cover{
-
+.container .cover {
   position: absolute;
   top: 0;
   left: 50%;
@@ -47,15 +43,14 @@ input{
   transform-style: preserve-3d;
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
-
 }
-.container #flip:checked ~ .cover{
+.container #flip:checked ~ .cover {
   transform: rotateY(-180deg);
   /* border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;*/
 }
- .container .cover .front,
- .container .cover .back{
+.container .cover .front,
+.container .cover .back {
   position: absolute;
   top: 0;
   left: 0;
@@ -63,18 +58,16 @@ input{
   width: 100%;
   /* border-top-right-radius: 10px;
   border-bottom-right-radius: 10px; */
-
 }
-.cover .back{
+.cover .back {
   transform: rotateY(180deg);
   backface-visibility: hidden;
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
-
 }
 .container .cover::before,
-.container .cover::after{
-  content: '';
+.container .cover::after {
+  content: "";
   position: absolute;
   height: 100%;
   width: 100%;
@@ -83,21 +76,16 @@ input{
   z-index: 12;
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
-
-
 }
 
-
-.container .cover::after{
+.container .cover::after {
   opacity: 0.3;
   transform: rotateY(180deg);
   backface-visibility: hidden;
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
-
-
 }
-.container .cover img{
+.container .cover img {
   position: absolute;
   height: 100%;
   width: 100%;
@@ -105,9 +93,8 @@ input{
   z-index: 10;
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
-
 }
-.container .cover .text{
+.container .cover .text {
   position: absolute;
   z-index: 130;
   height: 100%;
@@ -118,48 +105,41 @@ input{
   justify-content: center;
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
-
-
-
-
 }
 .cover .text .text-1,
-.cover .text .text-2{
+.cover .text .text-2 {
   font-size: 32px;
   font-weight: 400;
   color: #ffffff;
   text-align: center;
-
 }
-.cover .text .text-2{
+.cover .text .text-2 {
   font-size: 15px;
   font-weight: 500;
 }
-.container .forms{
+.container .forms {
   height: 100%;
   width: 100%;
   background: #fff;
-
 }
-.container .form-content{
+.container .form-content {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
 .form-content .login-form,
-.form-content .signup-form{
+.form-content .signup-form {
   width: calc(100% / 2 - 25px);
-
 }
-.forms .form-content .title{
+.forms .form-content .title {
   position: relative;
   font-size: 24px;
   font-weight: 500;
   color: #333;
 }
-.forms .form-content .title:before{
-  content: '';
+.forms .form-content .title:before {
+  content: "";
   position: absolute;
   left: 0;
   bottom: 0;
@@ -167,13 +147,13 @@ input{
   width: 25px;
   background: #7d2ae8;
 }
-.forms .signup-form  .title:before{
+.forms .signup-form .title:before {
   width: 20px;
 }
-.forms .form-content .input-boxes{
+.forms .form-content .input-boxes {
   margin-top: 30px;
 }
-.forms .form-content .input-box{
+.forms .form-content .input-box {
   display: flex;
   align-items: center;
   height: 50px;
@@ -181,7 +161,7 @@ input{
   margin: 10px 0;
   position: relative;
 }
-.form-content .input-box input{
+.form-content .input-box input {
   height: 100%;
   width: 100%;
   outline: none;
@@ -189,35 +169,34 @@ input{
   padding: 0 30px;
   font-size: 16px;
   font-weight: 500;
-  border-bottom: 2px solid rgba(0,0,0,0.2);
+  border-bottom: 2px solid rgba(0, 0, 0, 0.2);
   transition: all 0.3s ease;
-
 }
 .form-content .input-box input:focus,
-.form-content .input-box input:valid{
+.form-content .input-box input:valid {
   border-color: #7d2ae8;
 }
-.form-content .input-box i{
+.form-content .input-box i {
   position: absolute;
   color: #7d2ae8;
   font-size: 17px;
 }
-.forms .form-content .text{
+.forms .form-content .text {
   font-size: 14px;
   font-weight: 500;
   color: #333;
 }
-.forms .form-content .text a{
+.forms .form-content .text a {
   text-decoration: none;
 }
-.forms .form-content .text a:hover{
+.forms .form-content .text a:hover {
   text-decoration: underline;
 }
-.forms .form-content .button{
+.forms .form-content .button {
   color: #fff;
   margin-top: 40px;
 }
-.forms .form-content .button input{
+.forms .form-content .button input {
   color: #fff;
   background: #7d2ae8;
   border-radius: 6px;
@@ -225,39 +204,39 @@ input{
   cursor: pointer;
   transition: all 0.4s ease;
 }
-.forms .form-content .button input:hover{
+.forms .form-content .button input:hover {
   background: #5b13b9;
 }
-.forms .form-content label{
+.forms .form-content label {
   color: #5b13b9;
   cursor: pointer;
 }
-.forms .form-content label:hover{
+.forms .form-content label:hover {
   text-decoration: underline;
 }
 .forms .form-content .login-text,
-.forms .form-content .sign-up-text{
+.forms .form-content .sign-up-text {
   text-align: center;
   margin-top: 25px;
 }
-.container #flip{
+.container #flip {
   display: none;
 }
 @media (max-width: 730px) {
-  .container .cover{
+  .container .cover {
     display: none;
   }
   .form-content .login-form,
-  .form-content .signup-form{
+  .form-content .signup-form {
     width: 100%;
   }
-  .form-content .signup-form{
+  .form-content .signup-form {
     display: none;
   }
-  .container #flip:checked ~ .forms .signup-form{
+  .container #flip:checked ~ .forms .signup-form {
     display: block;
   }
-  .container #flip:checked ~ .forms .login-form{
+  .container #flip:checked ~ .forms .login-form {
     display: none;
   }
 }
