--- a/src/app/features/customer/view-customers/view-customers.component.html
+++ b/src/app/features/customer/view-customers/view-customers.component.html
@@ -8,7 +8,7 @@
       <div class="col-12 mb-3 mb-lg-5">
         <div class="overflow-hidden card table-nowrap table-card">
           <div
-            class="card-header d-flex justify-content-between align-items-center"
+            class="card-header d-flex justify-content-between align-items-center customer-container"
           >
             <h5 class="mb-0">All Customers</h5>
             <a href="#!" class="btn btn-light btn-sm">View All</a>
