--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -10,14 +10,15 @@ body {
 nav {
   background-color: white;
   position: fixed;
-  top: 15px;
-  left: 50%;
+  top:5px;
+left:50%;
   transform: translateX(-50%);
   display: inline-block;
   border: 2px solid #EBECF1;
 
   animation: slide-in 1s ease-out;
   width: 100%;
+  z-index: 1000;
 
 
 }
