Customer Details View (New Component)

--- a/src/app/features/auth/sign-up/sign-up.component.html
+++ b/src/app/features/auth/sign-up/sign-up.component.html
@@ -81,133 +81,138 @@
   </form>
 </div> -->
 
-
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="UTF-8">
-    <title>Agent Signup-Theby App </title>
-    <link rel="stylesheet" href="sign-up.component.css">
+    <meta charset="UTF-8" />
+    <title>Agent Signup-Theby App</title>
+    <link rel="stylesheet" href="sign-up.component.css" />
     <!-- Fontawesome CDN Link -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    />
     <!-- tried removing this to index.html but broke keeping in just for now -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   </head>
-<body>
-<div class="body">
-  <div class="container">
-    <input type="checkbox" id="flip" />
-    <div class="cover">
-      <div class="front">
-        <img src="\assets\photos\af5281e5-5174-43a4-a4e9-11d993cb35e8.jpg" alt="" />
-        <div class="text">
-          <span class="text-1">Helping Agents<br />Help Customers</span>
-          <span class="text-2">Join us</span>
-        </div>
-      </div>
-      <div class="back">
-        <img class="backImg" src="images/backImg.jpg" alt="" />
-        <div class="text">
-          <span class="text-1"
-            >Complete miles of journey<br />with one step</span
-          >
-          <span class="text-2">Let's get started</span>
-        </div>
-      </div>
-    </div>
-    <div class="forms">
-      <div class="form-content">
-
-        <div class="signup-form">
-          <div class="title">Agent Signup</div>
-
-          <form [formGroup]="signupForm" (ngSubmit)="onSignup()">
-            <div class="input-boxes">
-              <div class="agent-info" formGroupName="agent">
-                <div class="input-box">
-                  <i class="fas fa-user"></i>
-                  <input
-                    type="text"
-                    placeholder="Enter your first name"
-                    formControlName="first_name"
-                  />
-                </div>
-                <div class="input-box">
-                  <i class="fas fa-user"></i>
-                  <input
-                    type="text"
-                    placeholder="Enter your last name"
-                    formControlName="last_name"
-                  />
-                </div>
-                <div class="input-box">
-                  <i class="fas fa-user"></i>
-                  <input
-                    type="number"
-                    placeholder="Enter your national producer #"
-                    formControlName="npn"
-                  />
-                </div>
-                <div class="input-box">
-                  <i class="fas fa-user"></i>
-                  <input
-                    type="text"
-                    placeholder="Enter your state"
-                    formControlName="state"
-                  />
-                </div>
-              </div>
-              <div class="agent-info" formGroupName="user">
-                <div class="input-box">
-                  <i class="fas fa-envelope"></i>
-                  <input
-                    type="text"
-                    placeholder="Enter your email"
-                    formControlName="email"
-                  />
-                </div>
-                <div class="user-info">
-                  <div class="input-box">
-                    <i class="fas fa-lock"></i>
-                    <input
-                      type="password"
-                      placeholder="Enter your password"
-                      formControlName="password"
-                    />
-                  </div>
-                  <div class="input-box">
-                    <i class="fas fa-lock"></i>
-                    <input
-                      type="password"
-                      placeholder="Re-enter your password"
-                      formControlName="password_confirmation"
-                    />
-                  </div>
-                </div>
-              </div>
-              <div class="button input-box">
-                <input
-                    [disabled]="!signupForm.valid"
-                  type="submit"
-
-                  value="Submit"
-                />
-              </div>
-
-              <div class="text sign-up-text">
-                Already have an account? <label for="flip" [routerLink]="['/login']" routerLinkActive="router-link-active" >Login now</label>
-              </div>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  </head>
+  <body>
+    <div class="body">
+      <div class="container">
+        <input type="checkbox" id="flip" />
+        <div class="cover">
+          <div class="front">
+            <img
+              src="\assets\photos\af5281e5-5174-43a4-a4e9-11d993cb35e8.jpg"
+              alt=""
+            />
+            <div class="text">
+              <span class="text-1">Helping Agents<br />Help Customers</span>
+              <span class="text-2">Join us</span>
             </div>
-          </form>
+          </div>
+          <div class="back">
+            <img class="backImg" src="images/backImg.jpg" alt="" />
+            <div class="text">
+              <span class="text-1"
+                >Complete miles of journey<br />with one step</span
+              >
+              <span class="text-2">Let's get started</span>
+            </div>
+          </div>
+        </div>
+        <div class="forms">
+          <div class="form-content">
+            <div class="signup-form">
+              <div class="title">Agent Signup</div>
+
+              <form [formGroup]="signupForm" (ngSunup()bmit)="onSignup()">
+                <div class="input-boxes">
+                  <div class="agent-info" formGroupName="agent">
+                    <div class="input-box">
+                      <i class="fas fa-user"></i>
+                      <input
+                        type="text"
+                        placeholder="Enter your first name"
+                        formControlName="first_name"
+                      />
+                    </div>
+                    <div class="input-box">
+                      <i class="fas fa-user"></i>
+                      <input
+                        type="text"
+                        placeholder="Enter your last name"
+                        formControlName="last_name"
+                      />
+                    </div>
+                    <div class="input-box">
+                      <i class="fas fa-user"></i>
+                      <input
+                        type="number"
+                        placeholder="Enter your national producer #"
+                        formControlName="npn"
+                      />
+                    </div>
+                    <div class="input-box">
+                      <i class="fas fa-user"></i>
+                      <input
+                        type="text"
+                        placeholder="Enter your state"
+                        formControlName="state"
+                      />
+                    </div>
+                  </div>
+                  <div class="agent-info" formGroupName="user">
+                    <div class="input-box">
+                      <i class="fas fa-envelope"></i>
+                      <input
+                        type="text"
+                        placeholder="Enter your email"
+                        formControlName="email"
+                      />
+                    </div>
+                    <div class="user-info">
+                      <div class="input-box">
+                        <i class="fas fa-lock"></i>
+                        <input
+                          type="password"
+                          placeholder="Enter your password"
+                          formControlName="password"
+                        />
+                      </div>
+                      <div class="input-box">
+                        <i class="fas fa-lock"></i>
+                        <input
+                          type="password"
+                          placeholder="Re-enter your password"
+                          formControlName="password_confirmation"
+                        />
+                      </div>
+                    </div>
+                  </div>
+                  <div class="button input-box">
+                    <input
+                      [disabled]="!signupForm.valid"
+                      type="submit"
+                      value="Submit"
+                    />
+                  </div>
+
+                  <div class="text sign-up-text">
+                    Already have an account?
+                    <label
+                      for="flip"
+                      [routerLink]="['/login']"
+                      routerLinkActive="router-link-active"
+                      >Login now</label
+                    >
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
         </div>
       </div>
-
-
     </div>
-
-  </div>
-
-</div>
-<!-- <div class="login-form">
+    <!-- <div class="login-form">
   <div class="title">Login</div>
   <form action="#">
     <div class="input-boxes">
@@ -233,4 +238,5 @@
     </div>
   </form>
 </div> -->
-</body>
+  </body>
+</html>
