Setting Up Edit Customer and Details Page

--- a/src/app/features/auth/sign-up/sign-up.component.html
+++ b/src/app/features/auth/sign-up/sign-up.component.html
@@ -124,7 +124,7 @@
             <div class="signup-form">
               <div class="title">Agent Signup</div>
 
-              <form [formGroup]="signupForm" (ngSunup()bmit)="onSignup()">
+              <form [formGroup]="signupForm" (ngSubmit)="onSignup()">
                 <div class="input-boxes">
                   <div class="agent-info" formGroupName="agent">
                     <div class="input-box">
