--- a/src/app/features/customer/customer-details/customer-details.component.css
+++ b/src/app/features/customer/customer-details/customer-details.component.css
@@ -1,100 +1,242 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
-
-*{
-    margin: 0;
-    padding: 0;
-
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
+img {
+  max-width: fit-content;
+}
+.body {
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #4c3bec;
+  padding: 130px;
+}
+.container {
+  z-index: 0;
+  border-radius: 10px;
+  position: relative;
+  max-width: 1050px;
+  width: 100%;
+  background: #fff;
+  padding: 20px 50px;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  perspective: 2700px;
+  opacity: 100%;
+  padding: 65px;
+}
+input {
+  margin-top: 5px;
+}
+.container .cover {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  height: 100%;
+  width: 50%;
+  z-index: 98;
+  transition: all 1s ease;
+  transform-origin: left;
+  transform-style: preserve-3d;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+.container #flip:checked ~ .cover {
+  transform: rotateY(-180deg);
+  /* border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;*/
+}
+.container .cover .front,
+.container .cover .back {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  /* border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px; */
+}
+.cover .back {
+  transform: rotateY(180deg);
+  backface-visibility: hidden;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+.container .cover::before,
+.container .cover::after {
+  content: "";
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background: #ab7fe4;
+  opacity: 0.5;
+  z-index: 12;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 
-body{
-
-    background-color:#4c3bec;
+.container .cover::after {
+  opacity: 0.3;
+  transform: rotateY(180deg);
+  backface-visibility: hidden;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+.container .cover img {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  z-index: 10;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+.container .cover .text {
+  position: absolute;
+  z-index: 130;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
+.cover .text .text-1,
+.cover .text .text-2 {
+  font-size: 32px;
+  font-weight: 400;
+  color: #ffffff;
+  text-align: center;
+}
+.cover .text .text-2 {
+  font-size: 15px;
+  font-weight: 500;
+}
+.container .forms {
+  height: 100%;
+  width: 100%;
+  background: #fff;
+}
+.container .form-content {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.container{
-    padding: 30px 50px;
-    border: 1px solid #ddd;
-    border-radius: 15px;
-    margin: 10px auto;
-
+.form-content .login-form,
+.form-content .signup-form {
+  width: calc(100% / 2 - 25px);
 }
-h4{
-    letter-spacing: -1px;
-    font-weight: 400;
+.forms .form-content .title {
+  position: relative;
+  font-size: 24px;
+  font-weight: 500;
+  color: #333;
 }
-.img{
-    width: 70px;
-    height: 70px;
-    border-radius: 6px;
-    object-fit: cover;
+.forms .form-content .title:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  height: 3px;
+  width: 25px;
+  background: #7d2ae8;
 }
-#img-section p,#deactivate p{
-    font-size: 12px;
-    color: #777;
-    margin-bottom: 10px;
-    text-align: justify;
+.forms .signup-form .title:before {
+  width: 20px;
 }
-#img-section b,#img-section button,#deactivate b{
-    font-size: 14px;
+.forms .form-content .input-boxes {
+  margin-top: 30px;
 }
-
-label{
-    margin-bottom: 0;
-    font-size: 14px;
-    font-weight: 500;
-    color: #777;
-    padding-left: 3px;
+.forms .form-content .input-box {
+  display: flex;
+  align-items: center;
+  height: 50px;
+  width: 100%;
+  margin: 10px 0;
+  position: relative;
 }
-
-.form-control{
-    border-radius: 5px;
+.form-content .input-box input {
+  height: 100%;
+  width: 100%;
+  outline: none;
+  border: none;
+  padding: 0 30px;
+  font-size: 16px;
+  font-weight: 500;
+  border-bottom: 2px solid rgba(0, 0, 0, 0.2);
+  transition: all 0.3s ease;
 }
-
-input[placeholder]{
-    font-weight: 500;
+.form-content .input-box input:focus,
+.form-content .input-box input:valid {
+  border-color: #7d2ae8;
 }
-.form-control:focus{
-    box-shadow: none;
-    border: 1.5px solid #0779e4;
+.form-content .input-box i {
+  position: absolute;
+  color: #7d2ae8;
+  font-size: 17px;
 }
-select{
-    display: block;
+.forms .form-content .text {
+  font-size: 14px;
+  font-weight: 500;
+  color: #333;
+}
+.forms .form-content .text a {
+  text-decoration: none;
+}
+.forms .form-content .text a:hover {
+  text-decoration: underline;
+}
+.forms .form-content .button {
+  color: #fff;
+  margin-top: 40px;
+}
+.forms .form-content .button input {
+  color: #fff;
+  background: #7d2ae8;
+  border-radius: 6px;
+  padding: 0;
+  cursor: pointer;
+  transition: all 0.4s ease;
+}
+.forms .form-content .button input:hover {
+  background: #5b13b9;
+}
+.forms .form-content label {
+  color: #5b13b9;
+  cursor: pointer;
+}
+.forms .form-content label:hover {
+  text-decoration: underline;
+}
+.forms .form-content .login-text,
+.forms .form-content .sign-up-text {
+  text-align: center;
+  margin-top: 25px;
+}
+.container #flip {
+  display: none;
+}
+@media (max-width: 730px) {
+  .container .cover {
+    display: none;
+  }
+  .form-content .login-form,
+  .form-content .signup-form {
     width: 100%;
-    border: 1px solid #ddd;
-    border-radius: 10px;
-    height: 40px;
-    padding: 5px 10px;
-    /* -webkit-appearance: none; */
-}
-
-select:focus{
-    outline: none;
-}
-.button{
-    background-color: #fff;
-    color: #0779e4;
-}
-.button:hover{
-    background-color: #0779e4;
-    color: #fff;
-}
-.btn-primary{
-    background-color: #0779e4;
-}
-.danger{
-    background-color: #fff;
-    color: #e20404;
-    border: 1px solid #ddd;
-}
-.danger:hover{
-    background-color: #e20404;
-    color: #fff;
-}
-@media(max-width:576px){
-    .wrapper{
-        padding: 25px 20px;
-    }
-    #deactivate{
-        line-height: 18px;
-    }
+  }
+  .form-content .signup-form {
+    display: none;
+  }
+  .container #flip:checked ~ .forms .signup-form {
+    display: block;
+  }
+  .container #flip:checked ~ .forms .login-form {
+    display: none;
+  }
 }
