--- a/src/app/features/customer/customer-details/customer-details.component.html
+++ b/src/app/features/customer/customer-details/customer-details.component.html
@@ -8,7 +8,7 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="policy-img">
-                            <img src="https://static.vecteezy.com/system/resources/thumbnails/019/551/974/small/privacy-policy-valid-document-concept-icon-in-line-style-design-isolated-on-white-background-editable-stroke-vector.jpg" alt=""/>
+                            <img src="https://cdn.sanity.io/images/cb8i8bbb/production/b270c3b5cbe5a561a4bba7409c1ad03841e316df-1100x550.svg?w=1920&q=75&fit=clip&auto=format" alt=""/>
                             <div class="file btn btn-lg btn-primary">
                                 Upload Policy
                                 <input type="file" name="file"/>
