--- a/src/app/features/customer/view-customers/view-customers.component.html
+++ b/src/app/features/customer/view-customers/view-customers.component.html
@@ -49,7 +49,7 @@
                       </a>
                       <div class="dropdown-menu dropdown-menu-end">
                         <a
-                          routerLink="/customer-details"
+                        (click)="navigateToCustomerDetails(customer.id)"
                           routerLinkActive="router-link-active"
                           class="dropdown-item"
                           >View Details</a
