--- a/src/app/features/customer/customer-details/customer-details.component.css
+++ b/src/app/features/customer/customer-details/customer-details.component.css
@@ -19,7 +19,7 @@ body{
 .policy-img .file {
   position: relative;
   overflow: hidden;
-  margin-top: -20%;
+  margin-top: 0%;
   width: 70%;
   border: none;
   border-radius: 0;
@@ -29,8 +29,9 @@ body{
 .policy-img .file input {
   position: absolute;
   opacity: 0;
-  right: 0;
+  right:-150px;
   top: 0;
+
 }
 .profile-head h5{
   color: #333;
