--- a/src/app/features/customer/customer-details/customer-details.component.html
+++ b/src/app/features/customer/customer-details/customer-details.component.html
@@ -6,6 +6,7 @@
 <div class="container emp-profile">
             <form method="post">
                 <div class="row">
+
                     <div class="col-md-4">
                         <div class="policy-img">
                             <img src="https://cdn.sanity.io/images/cb8i8bbb/production/b270c3b5cbe5a561a4bba7409c1ad03841e316df-1100x550.svg?w=1920&q=75&fit=clip&auto=format" alt=""/>
@@ -18,7 +19,7 @@
                     <div class="col-md-6">
                         <div class="profile-head">
                                     <h5>
-                                    
+
                                     </h5>
 
 
@@ -58,7 +59,7 @@
                                                 <label>Full Name</label>
                                             </div>
                                             <div class="col-md-6">
-                                                <p>Dilbert Jenkins</p>
+                                                <p>{{selectedCustomer?.first_name}}</p>
                                             </div>
                                         </div>
                                         <div class="row">
@@ -168,7 +169,9 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                  </div>
+
             </form>
         </div>
 </div>
+
