displaying agentid in customer details

--- a/src/app/features/customer/customer-details/customer-details.component.html
+++ b/src/app/features/customer/customer-details/customer-details.component.html
@@ -88,21 +88,14 @@
                                         </div>
                                         <div class="row">
                                             <div class="col-md-6">
-                                                <label>Agent</label>
+                                                <label>Agent #</label>
                                             </div>
                                             <div class="col-md-6">
-                                                <p>{{selectedCustomer?.agent?.firstName}}</p>
+                                                <p>{{selectedCustomer?.agent_id}}</p>
                                             </div>
                                         </div>
-                                       
-                                        <div class="row">
-                                            <div class="col-md-6">
-                                                <label>State</label>
-                                            </div>
-                                            <div class="col-md-6">
-                                                <p>{{selectedCustomer?.address?.state}}</p>
-                                            </div>
-                                        </div>
+
+
                                         <div class="row">
                                             <div class="col-md-6">
                                                 <label>Customer ID #</label>
