--- a/src/app/features/customer/view-customers/view-customers.component.html
+++ b/src/app/features/customer/view-customers/view-customers.component.html
@@ -35,7 +35,7 @@
                   <td><span>{{customer.last_name}}</span></td>
                   <td><span>{{customer.phone}}</span></td>
                   <td><span>{{customer.email}}</span></td>
-                  <td><span>{{customer.agentId}}</span></td>
+                  <td><span>{{customer.agent_id}}</span></td>
                   <td><span>Policy Hello!</span></td>
                   <td class="text-end">
                     <div class="drodown">
