--- a/src/app/features/customer/view-customers/view-customers.component.html
+++ b/src/app/features/customer/view-customers/view-customers.component.html
@@ -14,7 +14,7 @@
             <a href="#!" class="btn btn-light btn-sm">View All</a>
           </div>
           <div class="table-responsive">
-            <table class="table mb-0">
+            <table class="table mb-1">
               <thead class="small text-uppercase bg-body text-muted table-head">
                 <tr>
                   <th>First Name</th>
@@ -36,7 +36,7 @@
                   <td><span>{{customer.phone}}</span></td>
                   <td><span>{{customer.email}}</span></td>
                   <td><span>{{customer.agent_id}}</span></td>
-                  <td><span>Policy Hello!</span></td>
+                  <td><span>{{customer.policy}}</span></td>
                   <td class="text-end">
                     <div class="drodown">
                       <a
