--- a/src/app/features/customer/customer-details/customer-details.component.html
+++ b/src/app/features/customer/customer-details/customer-details.component.html
@@ -41,10 +41,10 @@
                     <div class="col-md-4">
                         <div class="profile-work">
                             <p>Links</p>
-                            <a href="">Address ID{{selectedCustomer?.addressId}}</a><br/>
-                            <a href="">Policy</a><br/>
-                            <a href="">Agent</a><br/>
-                            <a href="">Notes</a><br/>
+                            <a href="chage to /address">Address</a><br/>
+                            <a href="change to/policy">Policy</a><br/>
+                            <a href="change to/agent">Agent</a><br/>
+                            <a href="chagne to open notepad">Notes</a><br/>
 
 
 
@@ -56,15 +56,16 @@
 
                                         <div class="row">
                                             <div class="col-md-6">
-                                                <label>Full Name</label>
+                                                <label>Full Name:</label>
                                             </div>
                                             <div class="col-md-6">
                                                 <p>{{selectedCustomer?.first_name}}  {{selectedCustomer?.last_name}}</p>
                                             </div>
                                         </div>
+
                                         <div class="row">
                                           <div class="col-md-6">
-                                              <label>Email</label>
+                                              <label>Email:</label>
                                           </div>
                                           <div class="col-md-6">
                                               <p>{{selectedCustomer?.email}}</p>
@@ -72,7 +73,7 @@
                                       </div>
                                         <div class="row">
                                             <div class="col-md-6">
-                                                <label>Phone</label>
+                                                <label>Phone:</label>
                                             </div>
                                             <div class="col-md-6">
                                                 <p>{{selectedCustomer?.phone}}</p>
@@ -80,15 +81,23 @@
                                         </div>
                                         <div class="row">
                                             <div class="col-md-6">
-                                                <label>DOB</label>
+                                                <label>DOB:</label>
                                             </div>
                                             <div class="col-md-6">
                                                 <p>{{selectedCustomer?.dob}}</p>
                                             </div>
                                         </div>
                                         <div class="row">
+                                          <div class="col-md-6">
+                                              <label>Policy Expiration:</label>
+                                          </div>
+                                          <div class="col-md-6">
+                                              <p>{{selectedCustomer?.policy?.expDate}}</p>
+                                          </div>
+                                        </div>
+                                        <div class="row">
                                             <div class="col-md-6">
-                                                <label>Agent #</label>
+                                                <label>Agent #:</label>
                                             </div>
                                             <div class="col-md-6">
                                                 <p>{{selectedCustomer?.agent_id}}</p>
@@ -98,7 +107,7 @@
 
                                         <div class="row">
                                             <div class="col-md-6">
-                                                <label>Customer ID #</label>
+                                                <label>Customer ID #:</label>
                                             </div>
                                             <div class="col-md-6">
                                                 <p>{{selectedCustomer?.id}}</p>
